versió 0.2 del projecte prjava01hernandez17

--- a/fitxer01hernandez17.html
+++ b/fitxer01hernandez17.html
@@ -1,10 +1,10 @@
 <html>
   <head>
       <title>
-         Nova pagina web de hernandez17
+         Nova pàgina web de hernandez17
       </title>
   </head>
   <body>
-         Nova pagina web de hernandez17
+         DAW2 UF4 Pràctica 2
   </body>
 </html>
